codegen cleanups